- The overflow of the sidenav is something I still don't quite grasp, but workable - Fixed padding of geeklists - Fixed some other small things. - BUG: if selecting a new geeklist before the list has finished loading, like when couch is pausing, blinking will not stop..

--- a/frontend/snappy/css/bg.css
+++ b/frontend/snappy/css/bg.css
@@ -199,3 +199,9 @@ ul {
 .collapsedStatic {
   display: none;
 }
+
+ul.geeklist {
+  padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
